feat(hateoas): adding hateoas for a more restfull service